# c_play

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: common.h  linked_list.h
src/: linked_list.c
test/: test_linked_list.c
test/include/: test_linked_list.h
